--- a/test/sammy.html
+++ b/test/sammy.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Sammy Test Suite</title>
     <link rel="stylesheet" media="screen" href="../vendor/jqUnit/testsuite.css"/>
-    <script type="text/javascript" src="../vendor/jquery-1.3.2.js"></script>
+    <script type="text/javascript" src="../vendor/jquery-1.4a1.min.js"></script>
     <script type="text/javascript" src="../vendor/jqUnit/jqUnit.js"></script>
     <script type="text/javascript" src="../vendor/jqunit-spec/jqunit-spec.js"></script>
    
@@ -34,6 +34,7 @@
         <input type="checkbox" name="check[]" value="TEST 1" checked="checked" />
         <input type="checkbox" name="check[]" value="TEST 2" checked="checked" />
       </form>
+      <div id="live"></div>
     </div>
     
     <div id="form_params" style="display:none;">
@@ -79,9 +80,5 @@
     
     <ol id="tests"></ol>
     <script type="text/javascript" src="test_sammy_application.js"></script>
-    <script type="text/javascript" src="test_sammy_location_proxy.js"></script>
-    <script type="text/javascript" src="test_sammy_event_context.js"></script>
-    <script type="text/javascript" src="test_sammy_plugins.js"></script>
-    <script type="text/javascript" src="test_sammy_storage.js"></script>
   </body>
 </html>
