--- a/test/sammy.html
+++ b/test/sammy.html
@@ -80,5 +80,9 @@
     
     <ol id="tests"></ol>
     <script type="text/javascript" src="test_sammy_application.js"></script>
+    <script type="text/javascript" src="test_sammy_location_proxy.js"></script>
+    <script type="text/javascript" src="test_sammy_event_context.js"></script>
+    <script type="text/javascript" src="test_sammy_plugins.js"></script>
+    <script type="text/javascript" src="test_sammy_storage.js"></script>
   </body>
 </html>
